...
                  Icons.check_circle_outline,
                  size: 22,
                  color: Colors.white,
                ),
                SizedBox(width: 8),
                Text(
                  '我還在',
                  style: TextStyle(
                    fontSize: 18,
                    fontWeight: FontWeight.bold,
                    color: Colors.white,
                    letterSpacing: 1.5,
                  ),
...
